--- a/rpm/harbour-kat.yaml
+++ b/rpm/harbour-kat.yaml
@@ -1,11 +1,11 @@
 Name: harbour-kat
 Summary: The unofficial client for vk.com
-Version: 0.5.3
-Release: 36
+Version: 0.5.4
+Release: 37
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
 Group: Qt/Qt
-URL: https://vk.com/kat_sailfishos
+URL: https://vk.com/mobilevika
 License: GNU GPLv3
 # This must be generated before uploading a package to a remote build service.
 # Usually this line does not need to be modified.
