--- a/harbour-kat.desktop
+++ b/harbour-kat.desktop
@@ -3,10 +3,9 @@ Type=Application
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-kat
 Exec=harbour-kat
-Name=Kat
+Name=AuroraKat
 
-
-[X-Sailjail]
-Permissions=Audio;Bluetooth;Documents;Downloads;Internet;Location;MediaIndexing;Microphone;Music;Pictures;PublicDir;RemovableMedia;UserDirs;Videos
-OrganizationName=org.ilyavysotsky
-ApplicationName=kat
+[X-Application]
+Permissions=Internet;Audio;Microphone;Pictures;UserDirs;MediaIndexing
+OrganizationName=ru.ilyavysotsky
+ApplicationName=aurorakat
