--- a/harbour-kat.desktop
+++ b/harbour-kat.desktop
@@ -2,14 +2,10 @@
 Type=Application
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-kat
-Exec=aurora-kat
+Exec=harbour-kat
 Name=AuroraKat
-
-Name[ru]=AuroraKat
 
 [X-Application]
 Permissions=Internet;Audio;Microphone;Pictures;UserDirs;MediaIndexing
 OrganizationName=ru.ilyavysotsky
-ApplicationName=aurora-kat
-ExecDBus=/usr/bin/aurora-kat
-ExportDBusInterfaces=ru.ilyavysotsky.aurora-kat
+ApplicationName=aurorakat
